Fix -spacing

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -86,7 +86,7 @@ $breakpoints: (
   'lg'  : 1200px
 ) !default;
 
-$default-spacing: 1rem;
+$default-spacing: 1em;
 
 // Fonts
 
